// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clear TimePicker 1`] = `
<span
  class="input-group date-time-picker-pf time-picker-pf input-group"
>
  <input
    aria-label="time-picker-input"
    class="form-control"
    type="text"
    value=""
  />
  <span
    class="picker-pf input-group-addon"
  >
    <span
      aria-hidden="true"
      class="fa fa-clock-o"
    />
  </span>
</span>
`;

exports[`Edit after clear TimePicker 1`] = `
<span
  class="input-group date-time-picker-pf time-picker-pf input-group"
>
  <input
    aria-label="time-picker-input"
    class="form-control"
    type="text"
    value="2:42 PM"
  />
  <span
    class="picker-pf input-group-addon"
  >
    <span
      aria-hidden="true"
      class="fa fa-clock-o"
    />
  </span>
</span>
`;

exports[`Edit form of TimePicker 1`] = `
<span
  class="input-group date-time-picker-pf time-picker-pf input-group"
>
  <input
    aria-label="time-picker-input"
    class="form-control"
    type="text"
    value="2:42 PM"
  />
  <span
    class="picker-pf input-group-addon"
  >
    <span
      aria-hidden="true"
      class="fa fa-clock-o"
    />
  </span>
</span>
`;

exports[`Show value after clear TimePicker 1`] = `
<span
  class="input-group date-time-picker-pf time-picker-pf input-group"
>
  <input
    aria-label="time-picker-input"
    class="form-control"
    type="text"
    value="2:22 PM"
  />
  <span
    aria-describedby="popover-time-picker"
    class="picker-pf input-group-addon"
  >
    <span
      aria-hidden="true"
      class="fa fa-clock-o"
    />
  </span>
</span>
`;

exports[`TimePicker is working properly 1`] = `
<span
  class="input-group date-time-picker-pf time-picker-pf input-group"
>
  <input
    aria-label="time-picker-input"
    class="form-control"
    type="text"
    value="5:22 PM"
  />
  <span
    class="picker-pf input-group-addon"
  >
    <span
      aria-hidden="true"
      class="fa fa-clock-o"
    />
  </span>
</span>
`;

exports[`TimePicker is working properly with time only 1`] = `
<span
  class="input-group date-time-picker-pf time-picker-pf input-group"
>
  <input
    aria-label="time-picker-input"
    class="form-control"
    type="text"
    value="5:22 PM"
  />
  <span
    class="picker-pf input-group-addon"
  >
    <span
      aria-hidden="true"
      class="fa fa-clock-o"
    />
  </span>
</span>
`;
